# worm-gear-3d

./: .gitignore  .vercelignore  CLAUDE.md  FOR_USER.md  LICENSE  README.md  TODO.md  netlify.toml  pyproject.toml  vercel.json
.github/workflows/: ci.yml  deploy-web.yml  publish.yml  test-web-build.yml
docs/: ENGINEERING_CONTEXT.md  GEOMETRY.md  GLOBOID_EVALUATION.md  MIGRATION_STATUS.md  TECH_DEBT_REMEDIATION_PLAN.md  WEB_TOOL_SPEC.md  WEB_TOOL_SPEC_V2.md  index.html
examples/: 7mm-glob.json  7mm-globoid.json  7mm.json  README.md  generate_pair.py  sample_m2_ratio30.json  unified_workflow.py  view_design.py
schemas/: calculator-inputs-v2.0.json  features-v2.0.json  manufacturing-params-v2.0.json  mesh-alignment-v2.0.json  wheel-params-v2.0.json  wormgear-design-v2.0.json
scripts/: generate_schemas.py  publish.sh  test-cli.sh
src/wormgear/: __init__.py  enums.py
src/wormgear/calculator/: __init__.py  core.py  js_bridge.py  output.py  validation.py
src/wormgear/cli/: generate.py
src/wormgear/core/: __init__.py  features.py  globoid_worm.py  mesh_alignment.py  virtual_hobbing.py  wheel.py  worm.py
src/wormgear/io/: __init__.py  loaders.py  schema.py
src/wormgear_geometry/: __init__.py  cli.py  features.py  globoid_worm.py  io.py  virtual_hobbing.py  wheel.py  worm.py
tests/: pydantic-pyodide-test.html  test_calculator.py  test_cli.py  test_features.py  test_globoid_worm.py  test_io.py  test_js_bridge.py  test_mesh_alignment.py  test_virtual_hobbing.py  test_web_build.py  test_wheel.py
web/: CNAME  CURRENT_STATUS.md  DEPLOYMENT.md  MAINTAINING.md  OCP_STATUS.md  README.md  app-lazy.js  app.js  build.sh  generator-worker.js  index.html  serve.py  style.css
web/modules/: bore-calculator.js  generator-ui.js  parameter-handler.js  pyodide-init.js  schema-validator.js
web/types/: wormgear-design.d.ts  wormgear-design.generated.d.ts
web/wormcalc/: output.py  validation.py
(+1 files in other folders)
