[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wormgear-geometry"
version = "0.1.0"
description = "CNC-ready STEP file generator for worm gear pairs using build123d"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Paul Fremantle", email = "paul@fremantle.org"}
]
keywords = ["worm gear", "CAD", "build123d", "CNC", "STEP", "manufacturing"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Computer Aided Design (CAD)",
]

dependencies = [
    "build123d>=0.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "ruff",
]

[project.scripts]
wormgear-geometry = "wormgear_geometry.cli:main"

[project.urls]
Homepage = "https://github.com/pzfreo/wormgear-geometry"
Documentation = "https://github.com/pzfreo/wormgear-geometry/blob/main/README.md"
Repository = "https://github.com/pzfreo/wormgear-geometry"
"Calculator (Tool 1)" = "https://github.com/pzfreo/wormgearcalc"
"Web Calculator" = "https://pzfreo.github.io/wormgearcalc/"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "N", "W"]
